logs/stellator.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/configobj-5.0.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/stellator'...
Compiling './lib/python3.5/site-packages/stellator/config.py'...
***   File "./lib/python3.5/site-packages/stellator/config.py", line 72
    except OSError, (ecode, emsg):
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stellator/fileparser.py'...
***   File "./lib/python3.5/site-packages/stellator/fileparser.py", line 46
    except OSError, (ecode, emsg):
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stellator/inventory.py'...
***   File "./lib/python3.5/site-packages/stellator/inventory.py", line 88
    print self, parts, value
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/stellator/virtualmachine.py'...
***   File "./lib/python3.5/site-packages/stellator/virtualmachine.py", line 207
    except VMRunError, emsg:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/stellator-1.0.5.egg-info'...
Listing './lib/python3.5/site-packages/systematic'...
Listing './lib/python3.5/site-packages/systematic/filesystems'...
Listing './lib/python3.5/site-packages/systematic/filesystems/zfs'...
Listing './lib/python3.5/site-packages/systematic/logformats'...
Listing './lib/python3.5/site-packages/systematic/platform'...
Listing './lib/python3.5/site-packages/systematic/platform/bsd'...
Listing './lib/python3.5/site-packages/systematic/platform/darwin'...
Listing './lib/python3.5/site-packages/systematic/platform/linux'...
Listing './lib/python3.5/site-packages/systematic/stats'...
Listing './lib/python3.5/site-packages/systematic/stats/filesystems'...
Listing './lib/python3.5/site-packages/systematic/stats/hardware'...
Listing './lib/python3.5/site-packages/systematic/stats/network'...
Listing './lib/python3.5/site-packages/systematic/stats/services'...
Listing './lib/python3.5/site-packages/systematic/stats/system'...
Listing './lib/python3.5/site-packages/systematic-4.7.19.egg-info'...
Listing './lib/python3.5/site-packages/test'...
Listing './lib/python3.5/site-packages/test/filesystems'...
Listing './lib/python3.5/site-packages/test/stats'...
Listing './lib/python3.5/site-packages/test/stats/hardware'...
Listing './share'...
Listing './share/python-wheels'...
